# Gaia-Image-Builder

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md
crates/core/app/: Cargo.toml  README.md
crates/core/app/src/: lib.rs
crates/core/app/src/cli/: mod.rs
crates/core/app/src/commands/: clean.rs  mod.rs  plan.rs  resolve.rs  run.rs  state.rs  validate.rs
crates/core/app/src/tui/: details.rs  discovery.rs  input.rs  mod.rs  model.rs  render.rs  run.rs  setup.rs  state.rs  status.rs
crates/core/app/tests/: cli_buildroot.rs  cli_clean.rs  cli_dispatch_failures.rs  cli_overview.rs  cli_parse.rs  cli_run_failures.rs  cli_run_reporting.rs  examples_buildroot.rs  examples_cross_polyglot.rs  examples_starting_point.rs  image_content_verification_flow.rs
crates/core/app/tests/support/: mod.rs
crates/core/config/: Cargo.toml  README.md
crates/core/config/src/: compile.rs  dynamic_inputs.rs  dynamic_inputs_glob.rs  dynamic_inputs_identity.rs  dynamic_inputs_tests.rs  lib.rs  overrides.rs  raw.rs  raw_assembly.rs  raw_inputs.rs
crates/core/config/src/compile/: artifact.rs  checkpoint.rs  image.rs  policy.rs  precedence.rs  source.rs  when.rs
crates/core/config/src/env/: mod.rs
crates/core/config/src/interpolate/: mod.rs  resolver.rs  scanner.rs
crates/core/config/src/load/: mod.rs
crates/core/config/src/merge/: image.rs  mod.rs
crates/core/config/src/overrides/: tests.rs
crates/core/config/tests/: config_pipeline_artifacts.rs  config_pipeline_dynamic_inputs.rs  config_pipeline_errors.rs  config_pipeline_image.rs  config_pipeline_interpolation.rs  config_pipeline_layering.rs  config_pipeline_policy.rs  config_pipeline_when.rs
crates/core/config/tests/support/: mod.rs
crates/core/exec/: Cargo.toml  README.md
crates/core/exec/src/: lib.rs  scheduler.rs
crates/core/exec/src/fs/: mod.rs
crates/core/exec/src/operations/: helpers.rs  mod.rs
crates/core/exec/src/process/: mod.rs
crates/core/exec/src/runtime/: mod.rs
crates/core/exec/src/scheduler/: tests.rs
crates/core/exec/tests/: exec_default.rs  exec_image_assembly.rs  exec_image_assembly_disks.rs  exec_image_assembly_filesystems.rs  exec_parallel_sources.rs  exec_provider_outputs.rs  exec_reuse_cancel.rs  exec_rollback.rs
crates/core/exec/tests/support/: mod.rs
crates/core/gaia/: Cargo.toml  README.md
crates/core/gaia/src/: main.rs
crates/core/plan/: Cargo.toml  README.md
crates/core/plan/src/: lib.rs  reuse.rs  reuse_assembly.rs  reuse_tests.rs
crates/core/plan/src/graph/: mod.rs
crates/core/plan/src/operations/: mod.rs
crates/core/plan/tests/: plan_checkpoints.rs  plan_graph.rs  plan_output_signatures.rs  plan_reuse.rs  plan_sources.rs
crates/core/plan/tests/support/: mod.rs
crates/core/process/: Cargo.toml
crates/core/process/src/: docker.rs  lib.rs  stream.rs  tar.rs  tests.rs
crates/core/report/: Cargo.toml  README.md
crates/core/report/src/: lib.rs  manifest.rs  masking.rs  model.rs  output.rs  provenance.rs  rebuild.rs  selection.rs  state.rs  summary.rs
crates/core/report/tests/: report_backend_state.rs  report_bundle.rs  report_failures.rs  report_masking.rs  report_reuse.rs
crates/core/report/tests/support/: mod.rs
crates/core/validate/: Cargo.toml  README.md
crates/core/validate/src/: artifacts.rs  checkpoints.rs  core.rs  diagnostics.rs  image.rs  image_assembly.rs  inputs.rs  install_stage.rs  lib.rs  model.rs  providers.rs  reporting.rs  sources.rs  workspace.rs
crates/core/validate/tests/: validation_artifacts.rs  validation_buildroot.rs  validation_buildroot_expected_image_names.rs  validation_buildroot_expected_images.rs  validation_checkpoints.rs  validation_ids.rs  validation_install_stage.rs  validation_interpolation_inputs.rs  validation_provider.rs  validation_starting_point.rs
crates/core/validate/tests/support/: mod.rs
crates/gaia-image-builder/: Cargo.toml
crates/gaia-image-builder/src/: build_inputs.rs  checkpoints.rs  error.rs  lib.rs  log_sanitize.rs  main.rs  workspace.rs
crates/gaia-image-builder/src/config/: mod.rs
crates/gaia-image-builder/src/executor/: mod.rs
crates/gaia-image-builder/src/modules/: buildroot.rs  buildroot_rpi.rs  checkpoints.rs  core.rs  mod.rs  stage.rs  util.rs
crates/gaia-image-builder/src/modules/program/: custom.rs  install.rs  java.rs  lint.rs  mod.rs  rust.rs
crates/gaia-image-builder/src/planner/: mod.rs
crates/gaia-image-builder/src/ui/: mod.rs
crates/gaia-image-builder/tests/: base_os_starting_point_integration.rs  build_pipeline_validation.rs  checkpoints_plan_integration.rs  checkpoints_remote_backends.rs  checkpoints_validation.rs  photonvision_helios_raze_minimal_example.rs  planner_optional_target_dep.rs  program_inputs_planning.rs  starting_point_run_integration.rs
crates/providers/artifact/artifact-provider-go/: Cargo.toml  README.md
crates/providers/artifact/artifact-provider-go/src/: lib.rs
crates/providers/artifact/artifact-provider-java/: Cargo.toml  README.md
crates/providers/artifact/artifact-provider-java/src/: lib.rs
crates/providers/artifact/artifact-provider-node/: Cargo.toml  README.md
crates/providers/artifact/artifact-provider-node/src/: lib.rs
crates/providers/artifact/artifact-provider-python/: Cargo.toml  README.md
crates/providers/artifact/artifact-provider-python/src/: lib.rs
crates/providers/artifact/artifact-provider-rust/: Cargo.toml  README.md
crates/providers/artifact/artifact-provider-rust/src/: lib.rs
crates/providers/artifact/artifact-providers/: Cargo.toml  README.md
crates/providers/artifact/artifact-providers/src/: command.rs  contract.rs  digest.rs  lib.rs  outputs.rs  tests.rs
crates/providers/default-providers/: Cargo.toml
crates/providers/default-providers/src/: lib.rs
crates/providers/image/image-provider-buildroot/: Cargo.toml  README.md
crates/providers/image/image-provider-buildroot/src/: archive.rs  buildroot.rs  command.rs  (+5 more)
crates/providers/image/image-provider-starting-point/: Cargo.toml  README.md
crates/providers/image/image-providers/: Cargo.toml  README.md
(+257 files in other folders)
