[package]
name = "gaia-image-builder"
version = "0.1.2"
edition = "2024"
default-run = "gaia"

[[bin]]
name = "gaia"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.0.3"
clap = { version = "4.5.60", features = ["derive"] }
gaia-image-builder-macros = { path = "../gaia-image-builder-macros" }
num_cpus = "1.17.0"
sha-crypt = "0.5.0"
sha2 = "0.10.9"
walkdir = "2.5.0"
hex = "0.4.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["json", "fmt", "env-filter", "registry"] }
reqwest = { version = "0.13.2", features = ["json", "rustls", "stream", "blocking"] }
tempfile = "3.26.0"
dotenv = "0.15.0"
chrono = { version = "0.4.44", features = ["serde"] }
serde_json = "1.0.149"
regex = "1.12.3"
ed25519-dalek = { version = "2.2.0", default-features = false, features = ["std"] }
base64 = "0.22.1"
filetime = "0.2.27"
crossterm = "0.29.0"
ratatui = { version = "0.30.0", default-features = false, features = ["crossterm"] }
libc = "0.2"
