[package]
name = "gaia-process"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Shared streamed process execution for Gaia providers."

[dependencies]
libc.workspace = true
tracing.workspace = true

[lints]
workspace = true
