[package]
name = "gaia-artifact-provider-java"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Java artifact provider scaffold for Gaia."

[dependencies]
gaia-artifact-providers.workspace = true
gaia-spec.workspace = true

[lints]
workspace = true
