[package]
name = "gaia-artifact-providers"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Shared artifact provider contracts and catalogs for Gaia."

[dependencies]
gaia-process.workspace = true
gaia-spec.workspace = true
tracing.workspace = true

[lints]
workspace = true
